--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
+    "prebuild": "npm install esbuild",
     "dev": "tsx server/index.ts",
-    "build": "vite build && npx esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build": "vite build && ./node_modules/.bin/esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
