--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "prebuild": "npm install esbuild",
     "dev": "tsx server/index.ts",
     "build": "vite build && node scripts/build.js",
+    "build-client": "vite build",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
