--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
 [build]
-  base = "client"
-  publish = "server/public"
-  command = "rm -rf node_modules package-lock.json && npm install && npm run build-client"
+  publish = "client/public"
+  command = "npm install && npm run build-client"
 
 [context.production.environment]
   VITE_SERVER_URL = "https://freechat-o1cb.onrender.com/"
