--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "prebuild": "npm install esbuild",
     "dev": "tsx server/index.ts",
-    "build": "vite build && node scripts/build.js",
-    "build-client": "vite build",
+    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build-client": "vite build --config vite.config.ts",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
