--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsx server/index.ts",
-    "build-server": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build-server": "node scripts/build-server.js",
     "build-client": "vite build --config vite.config.ts",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
