--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "tsx server/index.ts",
     "build-server": "node scripts/build-server.js",
     "build-client": "vite build --config vite.config.ts",
+    "build": "npm run build-server && npm run build-client",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
