--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsx server/index.ts",
-    "build-server": "node scripts/build-server.js",
-    "build-client": "vite build --config vite.config.ts",
-    "build": "npm run build-server && npm run build-client",
+    "build:server": "node scripts/build-server.js",
+    "build:client": "vite build --config vite.config.ts",
+    "build": "npm run build:client && npm run build:server",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
