--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-      "prebuild": "npm install esbuild"
-,    "dev": "tsx server/index.ts",
-    "build:server": "vite build && node scripts/build-server.js",
+    "prebuild": "npm install esbuild",
+    "dev": "tsx server/index.ts",
+    "build:server": "node scripts/build-server.js",
     "build:client": "vite build --config vite.config.ts",
+    "build": "npm run build:client && npm run build:server",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
