--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "client/public"
-  command = "npm install && npm run build-client"
+  command = "npm install && npm run build:client"
 
 [context.production.environment]
   VITE_SERVER_URL = "https://freechat-o1cb.onrender.com/"
